# ccr

./: .gitignore  .travis.yml  ChangeLog  LICENSE  Makefile.am  README.md  annotated.html  ccr-config.in  ccr_8_f90.html  ccr_8c.html  ccr_8c__incl.map  ccr_8c__incl.md5  classes.html  configure.ac  dir_5ada7fde3d698a0fd69e26c5a7824861.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  interfaceccr_1_1nc__def__var__bitgroom-members.html  interfaceccr_1_1nc__def__var__bitgroom.html  interfaceccr_1_1nc__def__var__bzip2-members.html  interfaceccr_1_1nc__def__var__bzip2.html  interfaceccr_1_1nc__def__var__granularbg-members.html  interfaceccr_1_1nc__def__var__granularbg.html  interfaceccr_1_1nc__def__var__lz4-members.html  interfaceccr_1_1nc__def__var__lz4.html  interfaceccr_1_1nc__def__var__zstandard-members.html  interfaceccr_1_1nc__def__var__zstandard.html  interfaceccr_1_1nc__initialize__ccr-members.html  interfaceccr_1_1nc__initialize__ccr.html  interfaceccr_1_1nc__inq__var__bitgroom-members.html  interfaceccr_1_1nc__inq__var__bitgroom.html  interfaceccr_1_1nc__inq__var__bzip2-members.html  interfaceccr_1_1nc__inq__var__bzip2.html  interfaceccr_1_1nc__inq__var__granularbg-members.html  interfaceccr_1_1nc__inq__var__granularbg.html  (+6 more)
.github/workflows/: build_all.yml  build_asan.yml  build_par.yml  build_par_2.yml  c-cpp.yml  lz4.yml  macos_all.yml  minimal.yml  minimal_2.yml  multifilter.yml  multifilter_asan.yml
docs/: Doxyfile.in  Makefile.am
docs/images/: ccr.xcf
fsrc/: Makefile.am  ccr.F90
ftest/: Makefile.am  ftst_ccr_bitgroom.F90  ftst_ccr_bzip2.F90  ftst_ccr_granularbg.F90  ftst_ccr_granularbr.F90  ftst_ccr_lz4.F90  ftst_ccr_zstandard.F90  run_tests.sh.in
hdf5_plugins/: Makefile.am  configure.ac
hdf5_plugins/BITGROOM/: Makefile.am  configure.ac
hdf5_plugins/BITGROOM/example/: Makefile.am  h5ex_d_bitgroom.c  run_tests.sh
hdf5_plugins/BITGROOM/src/: H5Zbitgroom.c  Makefile.am
hdf5_plugins/BITROUND/src/: H5Zbitround.c  Makefile.am
hdf5_plugins/BZIP2/: CMakeLists.txt  COPYING  CTestConfig.cmake  Makefile.am  README.txt  configure.ac
hdf5_plugins/BZIP2/example/: Makefile.am  h5ex_d_bzip2.c  run_tests.sh
hdf5_plugins/BZIP2/src/: CMakeLists.txt  H5Zbzip2.c  Makefile.am
hdf5_plugins/GRANULARBG/example/: Makefile.am  h5ex_d_granularbg.c  run_tests.sh
hdf5_plugins/GRANULARBG/src/: H5Zgranularbg.c  Makefile.am
hdf5_plugins/GRANULARBR/: configure.ac
hdf5_plugins/GRANULARBR/example/: Makefile.am  h5ex_d_granularbr.c  run_tests.sh
hdf5_plugins/GRANULARBR/src/: H5Zgranularbr.c  Makefile.am
hdf5_plugins/LZ4/: Makefile.am  configure.ac
hdf5_plugins/LZ4/example/: Makefile.am  h5ex_d_lz4.c  run_tests.sh  tst_lz4_size.c
hdf5_plugins/LZ4/src/: H5Zlz4.c  Makefile.am
hdf5_plugins/ZSTANDARD/: H5Zzstandard.c  Makefile.am  configure.ac
hdf5_plugins/ZSTANDARD/example/: Makefile.am  h5ex_d_zstandard.c  run_tests.sh
hdf5_plugins/ZSTANDARD/src/: H5Zzstandard.c  Makefile.am
include/: Makefile.am  ccr.h  ccr_meta.h.in  ccr_test.h
search/: all_0.js  all_1.js  all_2.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
src/: Makefile.am  ccr.c
test/: Makefile.am  run_benchmarks.sh.in  run_par_tests.sh.in  run_tests.sh  run_tests.sh.in  tst_benchmark.c  tst_bitgroom.c  tst_bzip2.c  tst_compress.c  tst_eamv1_benchmark.c  tst_gfs_data_1.c  tst_granularbg.c  tst_granularbr.c  tst_lz4.c  tst_par.c  tst_perf.c  tst_utils.c  tst_zstandard.c
test_h5/: Makefile.am  run_tests.sh.in  tst_h_bitgroom.c  tst_h_bzip2.c  tst_h_lz4.c  tst_h_zstandard.c  tst_lz4_size.c  tst_zstandard_size.c
